--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.10",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.4",
     "json-server": "^0.17.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
