--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "helmet": "^6.0.0",
     "mongodb": "^4.10.0",
     "pinia": "^2.0.23"
   },
