--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.9.4",
     "json-server": "^0.17.0",
+    "pinia": "^2.0.17",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
