--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/:path*", "destination": "../server/public/index.html" }
+    { "source": "/:path*", "destination": "./server/public/index.html" }
   ]
 }
