--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/:path*", "dest": "./public/index.html" }]
+  "rewrites": [{ "source": "/:path*", "destination": "./dist/index.html" }]
 }
